Support legacy external domain endpoints
